# charon

./: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  flake.nix  meson.build  meson_options.txt  shell.nix
charonc/: diagnostic.c  diagnostic.h  main.c  meson.build
charonlsp/: bindings.go  document.go  go.mod  go.sum  lsp.go  meson.build
compiler/: compiler.c  meson.build
devtools/: todos.py
docs/: book.toml
docs/src/: SUMMARY.md  charon.md
docs/src/lang/: types.md
docs/src/lang/syntax/: literals.md  loops.md
docs/theme/: highlight.js
lib/: meson.build
lib/include/charon/: builder.h  context.h  diag.h  diagnostics.def  element.h  file.h  interner.h  lexer.h  log.h  memory.h  node.h  nodes.def  parser.h  path.h  queries.h  query.h  source.h  symbol.h  token.h  tokens.def  trivia.def  trivia.h  utf8.h  util.h
lib/src/: builder.c  constants.h  context.c  context.h  diag.c  element.c  element.h  lexer.c  memory.c  node.c  node.h  platform.c  platform.h  query.c  source.c  source.h  test.c  token.c  token.h  trivia.c  util.c  util.h
lib/src/ast/: attribute.c  function.c  function.h  module.c  module.h  node.c  node.h  type.c
lib/src/codegen/: llvm.c
lib/src/common/: dynarray.h  fatal.h  list.c  list.h  memory.c  memory.h  platform.c  utf8.c  utf8.h
lib/src/core/: context.c  context.h  diag.c  interner.c
lib/src/ir/: ir.h  namespace.c  type.c  visit.c  visit.h
lib/src/lexer/: token.c  token.h  tokenizer.c  tokenizer.h  tokens.def
lib/src/lib/: alloc.h  context.c  context.h  diag.c  diag.h  lang_strings.def  list.c  log.c  log.h  memory.c  memory.h  source.c  source.h  vector.h
lib/src/lower/: lower.c  lower.h
lib/src/parser/: collector.h  expr.c  expression.c  parse.h  parser.c  parser.h  root.c  statement.c  stmt.c  tlc.c  type.c  util.c  util.h
lib/src/pass/: eval_types.c  lower.c  pass.h
lib/src/sema/: context.c  context.h  interner.c  interner.h  node_refs.c  queries.h  query.c  query.h  symbol.h
lib/src/sema/queries/: symtab.c
llvm-testbench/: .gitignore  main.c
lsp/: meson.build
lsp/src/: document.c  document.h  io.c  io.h  linedb.c  linedb.h  lsp.c  lsp.h  main.c  message.c  message.h
lsp/src/messages/: lifecycle.c  text_document.c
src/: charon.c  constants.h  diag.c  diag.h  main.c  primitive.h  source.h  version.h
src/ast/: attribute.c  attribute.h  node.c  node.h  type.c  type.h
src/codegen/: codegen.c  codegen.h  llvm.c  symbol.c  symbol.h
src/hlir/: attribute.c  attribute.h  node.c  node.h  type.c  type.h
src/ir/: function.c  function.h  ir.h  namespace.c  node.c  node.h  scope.c  type.c  type.h  visit.c  visit.h
src/lexer/: spec.c  spec.h  token.c  token.h  tokenizer.c  tokenizer.h  tokens.def
src/lib/: alloc.c  alloc.h  diag.c  diag.h  lang.h  lang_strings.def  log.c  log.h  memory.c  memory.h  source.c  source.h  vector.h
src/llir/: namespace.c  namespace.h  node.c  node.h  symbol.h  type.c  type.h
src/lower/: lower.c  lower.h
src/parser/: expr.c  parser.c  parser.h  root.c  stmt.c  tlc.c  util.c  util.h
src/pass/: codegen.c  eval_types.c  lower.c  pass.h
src/passes/: pass.h
src/semantics/: scope.c  scope.h  semantics.c  semantics.h  typecheck.c  typecheck.h
tests/: 00.charon  Makefile  bench.sh  parse_tester.c  run_parse_tests.sh  run_tests.sh  test.sh  tester_full.c  tester_parse.c
tests/exec/: 000.charon  000.test  001.charon  001.test  002.charon  002.test  003.charon  003.test  004.charon  004.test  005.charon  005.test  006.charon  006.test  007.charon  007.test  008.charon  008.test  009.charon  009.test  010.charon  010.test  011.charon  011.test  012.charon  012.test  013.charon  013.test  014.charon  014.test  015.charon  015.test  016.charon  016.test  017.charon  017.test  018.charon  018.test  019.charon  019.test  (+57 more)
tests/full/: test.charon
tests/parse/: 000.charon  000.test  001.test  002.test  003.charon  004.charon  004.test  005.charon  005.test  006.charon  007.test  008.charon  008.test  009.charon  009.test  010.charon  010.test  050.test  051.charon  051.test  052.charon  052.test  053.charon  053.test  054.charon  054.test  100.charon  100.test  101.charon  101.test  102.charon  102.test  char-escapes.charon  enum-type-pinning.charon  enum-type-pinning.test  function-pointers.test  function-returns.test  globals-and-structs.test  imports.charon  imports.test  (+23 more)
tests/parser/: 000.charon  000.test  001.charon  003.test  004.test  01.test  02.charon  04.charon  04.test  050.charon  050.test  100.charon
tests/runners/: full.c  parse.c
tools/llvm-testbench/: Makefile
tools/tree-sitter-charon/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tools/tree-sitter-charon/bindings/c/: tree-sitter-charon.pc.in
tools/tree-sitter-charon/bindings/go/: binding_test.go  go.mod
tools/tree-sitter-charon/bindings/node/: binding.cc
tools/tree-sitter-charon/bindings/python/tree_sitter_charon/: __init__.py  binding.c
tools/tree-sitter-charon/bindings/python/tree_sitter_treesitter/: __init__.py  binding.c
tools/tree-sitter-charon/bindings/rust/: lib.rs
tools/tree-sitter-charon/queries/: highlights.scm
tools/tree-sitter-charon/src/: grammar.json  node-types.json  parser.c
tools/vscode-extension/: .vscodeignore  LICENSE  build-tree-sitter.sh  charon.tmLanguage.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
tools/vscode-extension/src/: extension.ts  web-tree-sitter.d.ts
tools/vscode-extension/syntaxes/: charon.tmLanguage.json
